--- a/ReactNativeApp-master/package.json
+++ b/ReactNativeApp-master/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
-    "yup": "^0.28.5"
+    "yup": "^0.28.5",
+    "lottie-react-native": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
