--- a/ReactNativeApp-master/package.json
+++ b/ReactNativeApp-master/package.json
@@ -10,29 +10,41 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "apisauce": "^3.0.1",
     "expo": "~47.0.0",
+    "expo-blur": "~12.0.1",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "5.1.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
     "yup": "^0.28.5",
-    "lottie-react-native": "5.1.4"
+    "expo-secure-store": "~12.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-notifications": "~0.17.0",
+    "expo-device": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
