--- a/ReactNativeApp-master/package.json
+++ b/ReactNativeApp-master/package.json
@@ -10,44 +10,44 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "apisauce": "^3.0.1",
-    "expo": "~47.0.0",
-    "expo-blur": "~12.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-image-picker": "~14.0.2",
-    "expo-location": "~15.0.1",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
+    "expo": "^49.0.0",
+    "expo-blur": "~12.4.1",
+    "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.11",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "5.1.6",
     "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
     "react-native-expo-image-cache": "^4.1.0",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "yup": "^0.28.5",
-    "expo-secure-store": "~12.0.0",
+    "expo-secure-store": "~12.3.1",
     "expo-app-loading": "~2.1.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-notifications": "~0.17.0",
-    "expo-device": "~5.0.0"
+    "expo-splash-screen": "~0.20.5",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
