--- a/ReactNativeApp-master/package.json
+++ b/ReactNativeApp-master/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bugsnag/expo": "^49.0.1",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/hooks": "^3.0.0",
@@ -18,11 +19,18 @@
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "apisauce": "^3.0.1",
+    "bugsnag-expo-cli": "^49.0.0",
+    "dayjs": "^1.11.9",
     "expo": "^49.0.0",
+    "expo-app-loading": "~2.1.1",
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.11",
     "formik": "^2.2.9",
@@ -39,12 +47,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "yup": "^0.28.5",
-    "expo-secure-store": "~12.3.1",
-    "expo-app-loading": "~2.1.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-notifications": "~0.20.1",
-    "expo-device": "~5.4.0"
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
