--- a/ReactNativeApp-master/package.json
+++ b/ReactNativeApp-master/package.json
@@ -24,6 +24,7 @@
     "expo": "^49.0.0",
     "expo-app-loading": "~2.1.1",
     "expo-blur": "~12.4.1",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-image-picker": "~14.3.2",
